MMA-7158 Rydd opp i itestar og filnamn
Fjern felt vi ikkje mottek frå GG-replikeringa